pingpong-app-with-solutions/infra/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
  namespace: pingpong-b
spec:
  containers:
  - name: debug-container
    image: busybox
    command: ["sleep", "3600"]
